[package]
name = "rust-live"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[workspace]
members = [
  "create-practice/prost-live",
  "create-practice/axum-live",
  "create-practice/axum-ws-live",
  # "create-practice/dioxus-live",
  "create-practice/tonic-live",
]

[dependencies]
dioxus = "0.3.2"
