[package]
name = "chrome-v8-live"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
v8="0.68.0"
serde_v8="0.91.0"
serde = { version = "1.0.159", features = ["derive"] }
serde_json = "1.0.96"
reqwest = { version = "0.11.16", features = ["blocking"] }
once_cell = "1.17.1"
tokio = { version = "1.27.0", features = ["rt"] }
clap = { version = "4.2.4", features = ["derive"] }
lazy_static = "1.4.0"

[wrokspace]
