[package]
name = "kv-db"
version = "0.1.0"
edition = "2021"

[[bin]]
name="db-kvs"
path="src/lib_server.rs"

[[bin]]
name="db-kvc"
path="src/lib_client.rs"

[[bench]]
name="pubsub" # benches 下面一个叫 pubsub 文件用于基准测试
harness=false

[dependencies]
bytes = "1" # 高效处理网络 buffer 的库
prost = "0.8.0" # 处理 protobuf 的代码
prost-derive="0.12.3"
prost-build="0.12.3"
tracing = "0.1" # 日志处理
thiserror = "1.0"
dashmap = "5.5.3"
hyper = "1.1.0"
sled = "0.34.7"
tokio-util = { version = "0.7.10", features = ["codec", "compat"] }
flate2 = "1.0.28"
tokio = { version = "1", features = ["rt", "rt-multi-thread","fs","io-util", "macros", "net" ] } # 异步网络库
anyhow = "1" # 错误处理
tokio-rustls = "0.22.0"
rustls-native-certs = "0.5.0"
futures = "0.3" # 提供 Stream trait
yamux = "0.9"
tokio-stream = "0.1.14"
toml="0.8.8"
serde={version="1",features=["derive"]}
# 日志
opentelemetry-jaeger = "0.15" # opentelemetry jaeger 支持
tracing-appender = "0.1" # 文件日志
tracing-opentelemetry = "0.15" # opentelemetry 支持
tracing-subscriber = { version = "0.2", features = ["json", "chrono"] } # 日志处理

[dev-dependencies]
async-prost = "0.2.1" # 支持把 protobuf 封装成 TCP frame
pretty_assertions = "1.4.0"
tempfile = "3.9.0"
rand = "0.8.5"
certify = "0.3"
criterion = { version = "0.3", features = ["async_futures", "async_tokio", "html_reports"] } # benchmark

[build-dependencies]
prost-build = "0.12.3" # 编译 protobuf
