[package]
name = "kv-server"
version = "0.1.0"
edition = "2021"


[dependencies]
anyhow = "1.0.70"
async-prost = "0.4.0" #支持把 protobuf 封装成 TCP frame
bytes = "1.4.0"
dashmap = "5.4.0"
flate2 = "1.0.26" #处理gzip压缩
futures = "0.3.28" #提供stream Trait
prost = "0.10.4"
reqwest = "0.11.16"
sled = "0.34.7"
thiserror = "1.0.40"
tokio = { version = "1.27.0", features = ["full"] } #异步网络库
tracing = "0.1.37"
tracing-subscriber = "0.3.16"

[build-dependencies]
prost-build = "0.11.9"

[dev-dependencies]
tempfile = "3.6.0"
tokio-util = "0.7.8"
