[package]
name = "simpie-proxy-pingora"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
async-trait = "0.1.88"
once_cell = "1.21.3"
pingora = { version = "0.5.0", features = ["lb", "rustls"] }
tokio = { version = "1.0.140", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
serde = "1.0.219"
serde_yaml = "0.9.34"
rand = "0.9.1"

[dev-dependencies]
axum = "0.8.4"
serde_json = "1.0.140"
tokio = { version = "1.0.140", features = ["full"] }
serde = "1.0.219"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
