[package]
name = "sql-query-all"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
polars = { version = "0.30.0", features = ["json", "lazy"] } # DataFrame 库
reqwest = { version = "0.11.18", default-features = false, features = ["rustls-tls"] }
sqlparser = "0.34.0"
tokio = { version = "1", features = ["fs"]}
tracing = "0.1.37"

[dev-dependencies]
tracing-subscriber = "0.3.17" # 日志处理
tokio = { version = "1", features = ["full"]} # 在 example 下我们需要更多的 tokio feature
