[package]
name = "webcam"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
console_error_panic_hook="0.1.7"
serde={ version="1.0.152", features=["derive"] }
serde-wasm-bindgen = "0.4"
serde_json="1.0.93"
sycamore={version="0.8.0",features=["serde","suspense","futures"]}
tracing="0.1.37"
tracing-wasm="0.2.1"
js-sys="0.3.61"
wasm-bindgen={version="0.2.84", features=["serde-serialize"]}
wasm-bindgen-futures="0.4.34"

[dependencies.web-sys]
version="0.3.61"
features=[
"Window",
"VideoTrack",
"HtmlVideoElement",
"HtmlSelectElement",
"Navigator",
"MediaStream",
"MediaDeviceInfo",
"MediaDeviceKind",
"MediaStreamConstraints",
"Permissions",
"MediaDevices"
]

