[package]
name = "dioxus-live"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
console_error_panic_hook="0.1"
dioxus={version="0.3.2",features=["web"]}
tracing="0.1.37"
tracing-wasm="0.2.1"
wasm-bindgen="0.2.84"

[workspace]
