[package]
name = "prost-live"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1.4.0"
prost = "0.11.9"
serde = { version = "1.0.160", features = ["derive"] }
serde_json = "1.0.96"

[build-dependencies]
anyhow = "1.0.70"
prost-build = "0.11.9"

