[package]
name = "tonic-live"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.24"
futures = "0.3.28"
prost = "0.11.9"
tokio = { version = "1.27.0", features = ["full"] }
tonic = "0.9.1"
tracing="0.1.37"
tracing-subscriber="0.3.16"

[build-dependencies]
tonic-build = "0.9.1"
