[package]
name = "tonic-test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.72"
arc-swap = "1.6.0"
chrono = "0.4.26"
dashmap = "5.5.0"
futures = "0.3.28"
jwt = "0.16.0"
lazy_static = "1.4.0"
prost = "0.11.9"
serde = "1.0.179"
tokio = { version = "1.29.1", features = ["full"] }
tokio-stream = "0.1.14"
tonic = "0.9.2"
tracing = "0.1.37"
tracing-subscriber = "0.3.17"

# build时依赖
[build-dependencies]
tonic-build = "0.9.2"

[workspace]
members=[
  "broadcast"
]

