[package]
name = "actix-web-async-graphql"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]


# workspace 是 cargo 中的工作区。cargo 中，工作区共享公共依赖项解析（即具有共享 Cargo.lock），
# 输出目录和各种设置，如配置文件等的一个或多个包的集合。
[workspace]
members = [
  "./backend",
  "./frontend-yew",
  "./graphqlDome"
]

resolver = "2"

[profile.dev]
split-debuginfo = "unpacked"
