[package]
name = "proc-macros"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc_macro = true

[dependencies]
anyhow = "1.0.71"
serde = { version = "1.0.160", features = ["derive"] }
serde_json = "1.0.96"
