
[package]
name = "kv"
version = "0.1.0"
edition = "2021"

[[bin]]
name="kvc"
path="src/client.rs"

[[bin]]
name="kvs"
path="src/server.rs"

[dependencies]
anyhow = "1" # 错误处理
bytes = "1" # 高效处理网络 buffer 的库
prost = "0.10.4" # 处理 protobuf 的代码
tracing = "0.1" # 日志处理
thiserror="1.0.31"
dashmap="5.3.4"
http = "0.2" # 我们使用 HTTP status code 所以引入这个类型库
flate2 = "1" # gzip 压缩
sled="0.34.7"
tokio = { version = "1", features = ["full"] } # 异步网络库
tracing-subscriber = "0.3.10" # 日志处理

[dev-dependencies]
async-prost = "0.4.0" # 支持把 protobuf 封装成 TCP frame
futures = "0.3" # 提供 Stream trait
tempfile="3"
tokio-util = { version = "0.7.4", features = ["codec"]}

[build-dependencies]
prost-build = "0.11.2" # 编译 protobuf
